gen-tui/src/testing/snapshots/gen_tui__testing__layout_tests__skip_layer.snap
---
source: gen-tui/src/testing/layout_tests.rs
expression: snapshot
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                          █████                                                 "
"          █████         ╭─█N3██─╮                                               "
"  █████ ╭─█N1██─╮ █████ │ █████ │ █████ █████                                   "
"  █N0██─┤ █████ ├─█N2██─┤       ├─█N5██─█N6██                                   "
"  █████ ╰───────╯ █████ │ █████ │ █████ █████                                   "
"                        ╰─█N4██─╯                                               "
"                          █████                                                 "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
