gen-tui/src/testing/snapshots/gen_tui__testing__layout_tests__subcombinatorial_dag.snap
---
source: gen-tui/src/testing/layout_tests.rs
expression: snapshot
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"           █████    █████                                                       "
"        ╭──█N1██──┬─█N3██─╮                                                     "
"  █████ │  █████  │ █████ │ █████                                               "
"  █N0██─┤       ╭─╯       ├─█N5██                                               "
"  █████ │ █████ │  █████  │ █████                                               "
"        ╰─█N2██─┴──█N4██──╯                                                     "
"          █████    █████                                                        "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
