gen-tui/src/testing/snapshots/gen_tui__testing__layout_tests__target_gaps_complex_dag_x_1_y_3.snap
---
source: gen-tui/src/testing/layout_tests.rs
expression: snapshot
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                    █████                                                       "
"                ╭───█N3██───╮                                                   "
"                │   █████   │                                                   "
"          █████ │           │ █████                                             "
"        ╭─█N1██─┤           ├─█N6██─╮                                           "
"        │ █████ ╰─╮       ╭─╯ █████ │                                           "
"  █████ │         │ █████ │         │ █████ █████                               "
"  █N0██─┤         ├─█N4██─┤         ├─█N8██─█N9██                               "
"  █████ │         │ █████ │         │ █████ █████                               "
"        │         │       │         │                                           "
"        │ █████ ╭─╯       ╰─╮ █████ │                                           "
"        ╰─█N2██─┤           ├─█N7██─╯                                           "
"          █████ │   █████   │ █████                                             "
"                ╰───█N5██───╯                                                   "
"                    █████                                                       "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
